# lite-xl

./: CMakeLists.txt  meson.build  meson_options.txt
data/core/: keymap.lua
data/plugins/: universal_argument.lua
scripts/: build.sh
src/: CMakeLists.txt  meson.build  renwindow.c
